kubernetes/standard/singlenode/patch-fm.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flowmanager
spec:
  template:
    spec:
      $setElementOrder/containers:
        - name: flowmanager
      containers:
        - image: axway/flowmanager:[FLOWMANAGER_VERSION]
          name: flowmanager
