kubernetes/standard/singlenode/patch.yml
## Replace <NAMESPACE> with your namespace
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flowmanager
spec:
  template:
    spec:
      containers:
        - image: axway/flowmanager:[FLOWMANAGER_VERSION]
          name: flowmanager
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: st-plugin
  labels:
    app: flowmanager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flowmanager
  template:
    metadata:
      labels:
        app: flowmanager
    spec:
      serviceAccountName: flowmanager
      securityContext:
        fsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1001
      containers:
        - name: st-plugin
          image: ""
          imagePullPolicy: IfNotPresent
