kubernetes/standard/singlenode/ingress.yml
## Replace <HOST> with Flow Manager host

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flowmanager
  labels:
    app: flowmanager
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    ingress.kubernetes.io/secure-upstream: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
        - <HOST>
      secretName: tls
  rules:    
    - host: <HOST>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flowmanager
                port:
                  number: 8081
